<resources>
    <string name="app_name">Fokus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="description">Descrição</string>
    <string name="send">Enviar</string>

    <string name="btn_api_test">Test Api</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="my_points">Lista de fokus</string>

    <string name="m_rating">Nivel de Perigo</string>
    <string name="action_about">Sobre</string>
    <string name="action_config">Definicoes</string>
    <string name="action_exit">Sair</string>
    <string name="map_type">BaseMap</string>
    <string name="map_type_terain">Terreno</string>
    <string name="map_type_satelite">Satelite</string>

    <string name="imagem">Imagem</string>

    <string name="default_description">description</string>
    <string name="createdAtFoku">Data criada</string>
    <string name="descriptionFoku">Descricacao</string>
    <string name="nameFoku">Nome</string>
    <string name="nameFokuTitle">Nome do local</string>
    <string name="createdAtFokuTitle">Adicionado em</string>
    <string name="mySpotsOnly">Apenas meus pontos</string>
    <string name="map_look">Ver no mapa</string>
    <string name="fokuDetails">Detalhes</string>

    <string name="text_about">
        Se você chegou aqui, significa que está interessado em ajudar a sua comunidade a combater na eliminação dos mosquitos, transmissor dos vírus da Dengue, Zika, Paludismo, etc.
        Este aplicativo foi desenhado para pessoas como VOCÊ.

    </string>
    <string name="text_sobre">Sobre</string>
    <string name="text_pankman">PrankM</string>
    <string name="text_sua_parte">FACA SUA PARTE!!!</string>

</resources>
