<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.carlos.fokus.AboutActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:padding="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/pankman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_about"
        android:padding="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/sua_parte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sua_parte"
        android:padding="16dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

</LinearLayout>
