<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginTop="20dp">

       <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15dp"
            android:id="@+id/location"/>-->

        <ImageView
            android:id="@+id/imgFoku"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="2dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_camera_alt_black_16dp"
            />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imgFoku"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"
            android:layout_margin="2dp"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/lblRateMe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/m_rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:numStars="5"
            android:stepSize="1.0"
            android:rating="0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout1">

        <Button
            android:id="@+id/btSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/send"
            android:textColor="#ffffff" />

    </LinearLayout>


</RelativeLayout>